# napari-spacetx-explorer

./: .gitignore  LICENSE  README.md  TestingFunction.ipynb  deploy.bat  environment.yml  mkdocs.yml  requirements.txt  setup.cfg  setup.py  spots_reduced.csv  tox.ini
.napari/: config.yml
docs/: index.md
napari_spacetx_explorer/: Visualising_StarFISH_napari.ipynb  __init__.py  _csv_io.py  _csv_io_original.py  _dock_widget.py  _dock_widget_original.py  _function.py  _function2.py  _reader.py  _reader_function.py  _widget_test.py  dots_plot.py  starfish_visualisation.py
napari_spacetx_explorer/_tests/: test_dock_widget.py  test_function.py  test_reader.py
tests/: test_plugin.py
