[metadata]
name = napari-spacetx-explorer

author = Sebastian Gonzalez-Tirado
author_email = sebgoti8@gmail.com
license = BSD-3-Clause
url = https://github.com/sebgoti/napari-spacetx-explorer
description = A simple plugin for an interactive visualization of (un)decoded spots and whole-tissue images stored using the OME.ZARR format spec
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/sebgoti/napari-spacetx-explorer/issues
    Documentation = https://github.com/sebgoti/napari-spacetx-explorer#README.md
    Source Code = https://github.com/sebgoti/napari-spacetx-explorer
    User Support = https://github.com/sebgoti/napari-spacetx-explorer/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-spacetx-explorer = napari_spacetx_explorer
